# rudder

./: .gitignore  .travis.yml  .trivyignore  AGENTS.md  AI_POLICY.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Cargo.toml  DESIGN_DECISIONS  Dockerfile  Jenkinsfile  Jenkinsfile-security  LICENSE_EXCEPTION  Makefile  README  README.adoc  README.asciidoc  README.md  README.mkdown  SECURITY.adoc  SECURITY.md  TODO  cargo.mk  changelog-4.1.md  deny.toml  flake.nix  ncf  ncf.spec  pom.xml  promises.cf  qa-test  rust-toolchain.toml  rust.makefile  rust.mk  service_mapping.cf  trivy.yaml
agent/: Cargo.toml
agent/sources/client/: .clang-format  .clang-tidy  Makefile  README.md  argtable-aix.patch  qa-test  toml.patch
agent/src/: lib.rs
language/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.adoc  _typos.toml  deny.toml
language/docs/: DESIGN_DECISIONS  contributing.adoc  enums.adoc  index.adoc  integration.adoc  items.adoc  lexical-structure.adoc  operating-systems.adoc  statements-and-expressions.adoc  stdlib.adoc  types.adoc  usage.adoc
language/docs/examples/: documentation_ntp.rd.cf  documentation_ntp.rd.ps1  statements.rd
language/libs/: cfengine_core.rd  corelib.rd  oslib.rd
language/src/: command.rs  error.rs  generator.rs  io.rs  ir.rs  language_lib.rs  lib.rs  parser.rs  technique.rs
language/src/command/: compile.rs  lint.rs  save.rs  technique_generate.rs
language/src/generator/: cfengine.rs  dsc.rs  json.rs  markdown.rs
language/src/io/: cli_parser.rs  logs.rs  output.rs
language/src/ir/: enum_tree.rs  enums.rs  ir1.rs  ir2.rs  resource.rs  value.rs  variable.rs
language/src/parser/: tests.rs
language/src/technique/: cfstrings.rs  from_ir.rs
language/syntax/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
language/syntax/syntaxes/: rudder-language.tmLanguage.json
language/tests/: cli.rs  compile.rs  loop.rs
language/tests/compile_techniques/: f_enum.rd  s_basic.rd  s_basic.rl.cf  s_basic.rl.ps1  s_state_case.rd
language/tests/helpers/: 6.1.2.json  admin_management.json  admin_management.rd  admin_management.rd.json  cis.json  cis.rd.cf  cis9.1_cron.json  lines_present.json  normal.json  s_basic.json  s_ntp.json  s_ntp.rd.cf  single_db.json  wazuh_windows.json
language/tests/simple_technique/: README.md  technique.ps1
language/tests/utils/: mod.rs
language/tools/: add_json_header.sh  generate_lib  generated_formats_tester  rudderc-dev.conf  rudderc-prod.conf  test_all_techniques.sh  tester.sh
language/tools/methods_generator/: __init__.py  to_json.py  to_rl.py
policies/: .gitignore  Cargo.toml  Dockerfile  Makefile  _typos.toml  agent.Dockerfile  deny.toml  rust-toolchain.toml  setup.sh
policies/agent/: Cargo.toml  technique.ps1
policies/agent/src/: agent_state.rs  constants.rs  consts.rs  lib.rs  main.rs
policies/agent/templates/: fake_unix_agent.cf.askama  fake_windows_agent.ps1.askama
policies/agentd/: Cargo.toml
policies/agentd/resource/: agentd.conf.example  eventlog.ld  eventlog.mc
policies/agentd/src/: configuration.rs  lib.rs  linux.rs  main.rs  scheduler.rs  windows.rs
policies/arch-doc/: Makefile  README.md  arch-doc.bib  pandoc.mk  rudder.typ  rudder.typ.template
policies/arch-doc/agent-schedulers/: Makefile
policies/arch-doc/method-logger-v4.1/: Makefile
policies/arch-doc/module-augeas/: Makefile
policies/arch-doc/modules/: Makefile  modules.bib
policies/lib/: .gitignore  Cargo.toml  Jenkinsfile  README.md  _typos.toml  qa-test
policies/lib/ci/: methods.Dockerfile  typos.Dockerfile  user.sh
policies/lib/tests/: mod.rs  ncf.py
policies/minifusion/: Cargo.toml  README.md
policies/minifusion/src/: main.rs  os_release.rs  properties.rs
policies/module-types/: platform-support.md
policies/rudder-cli/: Cargo.toml
policies/rudder-cli/src/: lib.rs  (+1 more)
policies/rudder-commons/: Cargo.toml  Makefile
policies/rudder-commons-test/: Cargo.toml
policies/rudder-module-type/: Cargo.toml  README.md  deny.toml
policies/rudder-report/: Cargo.toml  Makefile  README.md
policies/rudder-resource-type/: Cargo.toml  Makefile
policies/rudderc/: Cargo.toml  Makefile  PSScriptAnalyzerSettings.psd1  README.adoc  build.rs  cure53.sh  generate-all-test-cases.sh  toto.yml
policies/supply-chain/: audits.toml  config.toml
policies/techniques/: anssi_bp_028.yml
policies/windows-update-agent/: Cargo.toml  README.md
rudder-lang/: .gitignore  Cargo.toml  Dockerfile  Makefile  README  README.adoc  build.rs  deny.toml  stdlib.rl.cf  tmp.json
rudder-lang/docs/: DESIGN_DECISIONS  concepts.adoc  contributing.adoc  enums.adoc  index.adoc  integration.adoc  items.adoc  lexical-structure.adoc  operating-systems.adoc  statements-and-expressions.adoc  stdlib.adoc  syntax.adoc  types.adoc  usage.adoc
rudder-lang/libs/: cfengine_core.rl  cfg.toml  config.toml  corelib.rl  generate-lib  osbuilder.ron  oslib.rl  resourcelib.rl  stdlib.rl  tmp.rl  translate_config.toml
rudder-lang/src/: ast.rs  cfstrings.rs  command.rs  compile.rs  compiler.rs  error.rs  file_paths.rs  generate-lib  generate_oslib.rs  generator.rs  generators.rs  io.rs  ir.rs  lib.rs  logger.rs  main.rs  migrate.rs  ncf  opt.rs  output.rs  parser.rs  rudderlang_lib.rs  technique.rs  tester.sh  translate.rs
rudder-lang/tests/: compile.rs  compile_utils.rs  tester.sh  translate.rs  virtual_files.toml
rudder-lang/tools/: cfjson_tester  generate-lib  generate_lib  generated_formats_tester  generic_methods.toml  osbuilder.ron  rudderc-dev.conf  rudderc-prod.conf  rudderc.conf  rudderc.conf~HEAD  test_all_techniques.sh  tester-dev.sh  tester.sh  translate_config.toml
rudderc/: .gitignore  Cargo.toml  Makefile
rudderc/docs/: index.adoc
rudderc/examples/: resource_directory.cf  resource_directory.md  resource_directory.rs  resource_directory.yml
rudderc/libs/: cfengine.yml
rudderc/src/: backends.rs  cli.rs  compiler.rs  frontends.rs  ir.rs  lib.rs  main.rs  resource_type.rs
rudderc/techniques/: REAME.md
rudderc/tests/: compile.rs  methods.rs  resource.rs
rudderc/tools/: metadata.xml
(+7842 files in other folders)
