[workspace]
resolver = "2"
members = ["rudderc", "rudder-module-type", "rudder-cli", "rudder-commons", "rudder-commons-test", "module-types/*", "minifusion"]

[workspace.package]
authors = ["Rudder developers <dev@rudder.io>"]
edition = "2021"
homepage = "https://www.rudder.io"
repository = "https://github.com/Normation/rudder"
license = "GPL-3.0-or-later"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
strip = true
