[package]
name = "rudderc"
version = "0.0.0-dev"
authors = ["Benoît Peccatte <benoit.peccatte@rudder.io>", "Rudder developers <dev@rudder.io>"]
edition = "2018"
readme = "README.adoc"
homepage = "https://www.rudder.io"
repository = "https://github.com/Normation/rudder"
license = "GPL3"

[dependencies]
maplit = "^1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
nom = "^5.0"
toml = "^0.5"
regex = "^1.3"
lazy_static = "^1.4"
nom_locate = "^1.0"
colored = "1.9.0"
ngrammatic = "^0.3.1"
log = "0.4.0"
env_logger = "0.7.1"
ron = "0.5.1"
[dev-dependencies]
proptest = "0.9"
test-case = "0.3.3"
