[package]
name = "rudderc"
version = "0.0.0-dev"
authors = ["Benoît Peccatte <benoit.peccatte@rudder.io>", "Rudder developers <dev@rudder.io>"]
edition = "2018"
readme = "README.adoc"
homepage = "https://www.rudder.io"
repository = "https://github.com/Normation/rudder"
license = "GPL3"

[[bin]]
name = "rudderc"
path = "src/bin/rudderc.rs"

[dependencies]
maplit = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
nom = "5"
toml = "0.5"
regex = "1"
lazy_static = "1"
nom_locate = "1"
colored = "1"
ngrammatic = "0.3"
log = "0.4"
env_logger = "0.7"

[dev-dependencies]
proptest = "0.9"
test-case = "0.3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
colored = "1"
