[package]
name = "rudderc"
version = "0.0.0-dev"
authors = ["Benoît Peccatte <benoit.peccatte@rudder.io>", "Rudder developers <dev@rudder.io>"]
edition = "2018"
readme = "README.adoc"
homepage = "https://www.rudder.io"
repository = "https://github.com/Normation/rudder"
license = "GPL-3.0-or-later"

[[bin]]
name = "rudderc"
path = "src/bin/rudderc.rs"

[dependencies]
colored = "2"
env_logger = "0.7"
lazy_static = "1"
log = "0.4"
maplit = "1"
ngrammatic = "0.3"
nom = "5"
nom_locate = "2"
regex = "1"
serde = { version = "1", features = ["derive" ] }
serde_json = "1"
structopt = "0.3"
toml = "0.5"
typed-arena = "2.0"
walkdir = "2"
backtrace = "0.3"

[dev-dependencies]
test-case = "1"
