[package]
name = "agent"
version = "0.1.0"
description = "rudder agent implementation"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.100"
toml = "0.9.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
hostname = "0.4.1"
chrono = { version = "0.4.42", features = ["serde"] }
tempfile = "3.23.0"
askama = "0.14.0"
uuid = { version = "1.18.1", features = ["v4"] }
tracing = "0.1.41"

[features]
test-windows = []
test-unix = []
default = ["test-unix"]

