[package]
name = "lib"
version = "0.0.0-dev"
description = "Methods library"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
rudderc = { path = "../rudderc" }
rudder_commons = { path = "../rudder-commons" }
tempfile = "3.14.0"
anyhow = "1.0.93"
serde_json = "1.0.133"
dyn-clone = "1.0.18"
log = "0.4.22"
itertools = "0.14.0"
test-log = "*"
serde_yaml = "0.9.34"
env_logger = "0.11.6"
regex = "1.11.1"
tiny_http = "0.12.0"
posix-acl = "1.2.0"
uzers = "0.12.1"

[dev-dependencies]
test-log = "*"
