[package]
name = "lib"
version = "0.0.0-dev"
description = "Methods library"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
rudderc = { path = "../rudderc" }
agent = { path = "../agent" }
rudder_commons = { path = "../rudder-commons" }
tempfile = "3.14.0"
anyhow = "1.0.93"
serde_json = "1.0.133"
dyn-clone = "1.0.18"
itertools = "0.14.0"
test-log = "*"
serde_yaml = "0.9.34"
env_logger = "0.11.6"
regex = "1.11.1"
tiny_http = "0.12.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
indexmap = "2.12.0"

[target.'cfg(unix)'.dependencies]
posix-acl = "1.2.0"
uzers = "0.12.1"

[dev-dependencies]
test-log = "*"

[features]
default = ["agent/test-unix"]
test-windows = ["agent/test-windows"]
test-unix = ["agent/test-unix"]
