[package]
name = "rudder_commons_test"
version = "0.0.0-dev"
description = "Shared implementation for tests"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
rudder_module_type = { path = "../rudder-module-type" }
