[package]
name = "rudder_commons"
version = "0.0.0-dev"
description = "Shared types between agent libraries and policy compiler"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
fancy-regex = "0.13.0"
nom = "7"
walkdir = "2"
log = "0.4"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
