[package]
name = "rudder_module_type"
version = "0.0.0-dev"
description = "Implement configuration module types for Rudder"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
serde-aux = "4.5.0"
gumdrop = "0.8"
rudder_commons = { path = "../rudder-commons" }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock", "std", "unstable-locales"] }
log = "0.4.27"
fern = "0.7.1"

[dev-dependencies]
pretty_assertions = "1"
# Fix for workspace not merged yet
test-generator = { git = "https://github.com/JamesGuthrie/test-generator", rev = "82e7999" }

[features]
default = ["backup"]
# Enable file backup helpers
backup = ["chrono"]
