[package]
name = "rudder-report"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.38"
clap = { version = "4", features = ["derive"] }
rudder-relayd = { path = "../../relay/sources/relayd" }
serde = "1.0.214"
serde_json = "1.0.132"
