[package]
name = "rudderc"
version = "0.0.0-dev"
description = "Rudder configuration policies compiler"
authors = ["Rudder developers <dev@rudder.io>"]
edition = "2021"
homepage = "https://www.rudder.io"
repository = "https://github.com/Normation/rudder"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
askama = "0.12"
boon = "0.5.0"
clap = { version = "4", features = ["derive"] }
colored = "2"
quick-xml = { version = "0.29.0", features = ["serialize"] }
regex = "1"
mdbook = { version = "0.4.28", default-features = false, features = ["search"] }
nom = "7.1.3"
fancy-regex = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
strsim = "0.10"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
include_dir = "0.7.3"
env_logger = "0.10"
walkdir = "2"
tempfile = "3"
rudder_commons = { path = "../rudder-commons" }

[dev-dependencies]
pretty_assertions = "1"
# Fix for workspace not merged yet
test-generator = { git = "https://github.com/JamesGuthrie/test-generator", rev = "82e7999" }
