[package]
name = "rudderc"
version = "0.0.0-dev"
description = "Rudder configuration policies compiler"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
agent = { path = "../agent" }
anyhow = "1"
askama = "0.14"
boon = "0.6.0"
clap = { version = "4", features = ["derive"] }
quick-xml = { version = "0.38.0", features = ["serialize"] }
regex = "1"
mdbook = { version = "0.4.28", default-features = false, features = ["search"] }
nom = "8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
format_serde_error = { git = "https://github.com/fennewald/format_serde_error/", rev = "06ef275" }
strsim = "0.11"
serde_json = "1"
# Compile dev and release with trace logs enabled
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
include_dir = "0.7.3"
walkdir = "2"
tempfile = "3"
rudder_commons = { path = "../rudder-commons" }
rudder_cli = { path = "../rudder-cli" }
zip = { version = "6.0.0", default-features = false, features = ["deflate", "time"] }
indexmap = "2.12.0"

[features]
"embedded-lib" = []

[dev-dependencies]
pretty_assertions = "1"
# Fix for workspace isn't merged yet
test-generator = { git = "https://github.com/JamesGuthrie/test-generator", rev = "82e7999" }

[build-dependencies]
rudder_commons = { path = "../rudder-commons" }
serde_json = "1"


[package.metadata.cargo-machete]
ignored = ["regex"]
