[package]
name = "rudder-module-augeas"
version = "0.0.0-dev"
description = "Configuration files management using Augeas"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
bytesize = { version = "1.3.0" }
gumdrop = "0.8.1"
ipnet = "2.0.0"
iprange = { version = "0.6" }
nom = "7"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2"
chumsky = { version = "1.0.0-alpha.7", features = ["pratt", "label"] }
ariadne = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-inline-default = "0.2"
serde_with = "3"
similar = "2.6.0"
regex = "1.11.1"
rudder_module_type = { path = "../../rudder-module-type" }
#raugeas = "0.3.0"
raugeas = { git = "https://github.com/Normation/raugeas" }
rustyline = "15"
zxcvbn = "3"

[dev-dependencies]
rudder_commons_test = { path = "../../rudder-commons-test" }
tempfile = "3"
