[package]
name = "rudder-module-augeas"
version = "0.0.0-dev"
description = "Configuration files management using Augeas"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
bytesize = { version = "1.3.0", features = ["serde"] }
gumdrop = "0.8.1"
ipnet = "2.0.0"
iprange = { version = "0.6" }
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-inline-default = "0.2"
serde_with = "3"
similar = "2.6.0"
regex = "1.11.1"
rudder_module_type = { path = "../../rudder-module-type" }
raugeas = "0.3.1"
#raugeas = { git = "https://github.com/Normation/raugeas" }
rustyline = "15"
secrecy = "0.5.1"
zxcvbn = "3"
pest = "2.7.15"
pest_derive = "2.7.15"

[dev-dependencies]
rudder_commons_test = { path = "../../rudder-commons-test" }
tempfile = "3"
