[package]
name = "rudder-module-augeas"
version = "0.0.0-dev"
description = "Configuration files management using Augeas"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
ariadne = "0.5"
bytesize = { version = "2.0.1", features = ["serde"] }
gumdrop = "0.8.1"
ipnet = "2.0.0"
iprange = { version = "0.6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-inline-default = "0.2"
serde_with = "3"
similar = "2.6.0"
regex = "1.11.1"
rudder_module_type = { path = "../../rudder-module-type" }
raugeas = "1.0"
rustyline = "16"
secrecy = "0.10"
zxcvbn = "3"
pest = "2.7.15"
pest_derive = "2.7.15"
chrono = { version = "0.4.39", features = ["serde"] }

[dev-dependencies]
rudder_commons_test = { path = "../../rudder-commons-test" }
tempfile = "3"
