[package]
name = "rudder-module-commands"
version = "0.0.0-dev"
description = "Commands execution"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
rudder_module_type = { path = "../../rudder-module-type" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.32", features = ["derive"] }
