[package]
name = "rudder-module-commands"
version = "0.0.0-dev"
description = "Commands execution"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
rudder_module_type = { path = "../../rudder-module-type" }
serde = { version = "1.0.220", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4.5.32", features = ["derive"] }
wait-timeout = "0.2.1"
rustix = { version = "1.0.8", features = ["process", "fs"] }
itertools = "0.14.0"
indexmap = { version = "2.11.3", features = ["serde"] }
uzers = "0.12.1"
