[package]
name = "rudder-module-type-directory"
version = "0.0.0-dev"
description = "Directory management"
authors = ["Rudder developers <dev@rudder.io>"]
edition = "2021"
readme = "README.md"
homepage = "https://www.rudder.io"
repository = "https://github.com/Normation/rudder"
license = "GPL-3.0-or-later"

[dependencies]
# FIXME test static build with musl
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rudder_module_type = { path = "../../rudder-module-type" }

[dev-dependencies]
rudder_commons_test = { path = "../../rudder-commons-test" }
tempfile = "3"