[package]
name = "rudder-module-directory"
version = "0.0.0-dev"
description = "Directory management"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# FIXME test static build with musl
anyhow = "1"
file-owner = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rudder_module_type = { path = "../../rudder-module-type" }

[dev-dependencies]
rudder_commons_test = { path = "../../rudder-commons-test" }
tempfile = "3"
