[package]
name = "rudder-module-inventory"
version = "0.0.0-dev"
description = "Minimal inventory agent generating Fusion Inventory compatible output"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
quick-xml = { version = "0.38.0", features = ["serialize"] }
sysinfo = "0.36"
serde = { version = "1", features = ["derive"] }
hostname = "0.4"
anyhow = "1"
clap = { version = "4.3.11", features = ["derive"] }
chrono = "0.4"
regex = "1"

[target.'cfg(unix)'.dependencies]
uname-rs = "0.1"

[dev-dependencies]
pretty_assertions = "1"
