[package]
name = "rudder-module-scheduler"
version = "0.0.0-dev"
description = "Scheduling"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rudder_module_type = { path = "../../rudder-module-type" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
jiff = {  version = "0.2.16", features = ["serde"] }
chrono = "0.4.42"
pretty_assertions = "1.4.1"

[dev-dependencies]
rudder_commons_test = { path = "../../rudder-commons-test" }
tempfile = "3"
