[package]
name = "rudder-module-scheduler"
version = "0.0.0-dev"
description = "Scheduling"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
cli-table = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rudder_module_type = { path = "../../rudder-module-type", features = ["splay"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = {  version = "0.4.42", features = ["serde"] }
gumdrop = "0.8.0"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1.4.1"
