[package]
name = "rudder-module-secedit"
version = "0.0.0-dev"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
rust-ini = "0.21.3"
serde_json = "1.0.145"
tempdir = "0.3.7"
utf16string = "0.2.0"
