[package]
name = "rudder-module-type-system-updates"
version = "0.0.0-dev"
description = "Patch management"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rudder_module_type = { path = "../../rudder-module-type" }
chrono = { version = "0.4.38", features = ["serde"] }
fnv = "1.0.7"
log = "0.4.21"

[dev-dependencies]
rudder_commons_test = { path = "../../rudder-commons-test" }
tempfile = "3"
pretty_assertions = "1"
