[package]
name = "rudder-module-system-updates"
version = "0.0.0-dev"
description = "Patch management"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
cli-table = "0.5"
gag = "1"
gumdrop = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rudder_module_type = { path = "../../rudder-module-type" }
rust-apt-compat = { package = "rust-apt", git = "https://gitlab.com/amousset/rust-apt.git", branch = "rudder", optional = true }
rust-apt = { git = "https://gitlab.com/amousset/rust-apt.git", branch = "rudder-libapt07", optional = true }
memfile = { version = "0.3.2", optional = true }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
fnv = "1.0.7"
log = "0.4.21"

[features]
# Enable APT package management
apt = ["dep:rust-apt", "dep:memfile"]
# Build with the old APT compatibility
apt-compat = ["dep:rust-apt-compat", "dep:memfile"]

[dev-dependencies]
rudder_commons_test = { path = "../../rudder-commons-test" }
tempfile = "3"
pretty_assertions = "1"
libc = "0.2.164"
