[package]
name = "rudder-module-template"
version = "0.0.0-dev"
description = "Template management"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# we want stable order in produced config files
# json and urlencode provide built-in filters
minijinja = { version = "2", features = ["preserve_order", "json", "urlencode"] }
mustache = "0.9.0"
rudder_module_type = { path = "../../rudder-module-type" }
clap = { version = "4.5.32", features = ["derive"] }

[dev-dependencies]
rudder_commons_test = { path = "../../rudder-commons-test" }
tempfile = "3"
assert_cmd = "2.0.14"
