[package]
name = "rudder-module-template"
version = "0.0.0-dev"
description = "Template management"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# we want stable order in produced config files
# json and urlencode provide built-in filters
minijinja = { version = "2", features = ["debug", "preserve_order", "json", "urlencode", "builtins"] }
mustache = { version = "0.9.0", git = "https://github.com/Normation/rust-mustache.git" , features = ["CFEngine"] }
rudder_module_type = { path = "../../rudder-module-type", features = ["diff"] }
clap = { version = "4.5.32", features = ["derive"] }
tempfile = "3.19.1"
base64 = "0.22.1"
urlencoding = "2.1.3"
sha2 = "0.10.8"
sha1 = "0.10.6"
base16ct = { version = "0.3.0", features = ["alloc"] }
shlex = "1.3.0"
regex = "1.11.1"
minijinja-contrib = { version = "2.8.0", features = ["datetime", "rand", "wordcount", "pycompat"] }

[dev-dependencies]
rudder_commons_test = { path = "../../rudder-commons-test" }
tempfile = "3"
assert_cmd = "2.0.14"
