[package]
name = "rudder-relayd"
version = "0.0.0-dev"
authors = ["Rudder developers <dev@rudder.io>"]
edition = "2018"
description = "Rudder relay component"
readme = "README.md"
homepage = "https://www.rudder.io"
repository = "https://github.com/Normation/rudder"
license = "GPL-3.0-or-later"

[[bench]]
harness = false
name = "benches"

[dependencies]
# We use vendored openssl as we require at least
# 1.1.1h for our certificate validation based on pinning.
# (it works since https://github.com/openssl/openssl/commit/e2590c3a162eb118c36b09c2168164283aa099b4)
anyhow = "1"
base64 = "0.13"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
diesel = { version = "1", default-features = false, features = ["postgres", "chrono", "r2d2"] }
# Uses rust implementation by default
flate2 = "1"
futures = { version = "0.3", default-features = false }
gumdrop = "0.8"
hex = "0.4"
humantime = "2"
hyper = { version = "0.14", default-features = false }
inotify = "0.9"
lazy_static = "1"
log = "0.4"
md-5 = "0.9"
nom = "7"
openssl = { version = "0.10", features = ["vendored"] }
prometheus = { version = "0.12", default-features = false, features = ["process"] }
regex = "1"
# Use openssl for TLS to be consistent
reqwest = { version = "0.11.1", default-features = false, features = ["stream", "blocking", "native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
thiserror = "1"
tokio = { version = "1", default-features = false, features = [ "rt-multi-thread", "process", "macros", "signal", "fs"] }
tokio-stream = { version = "0.1", default-features = false, features = ["io-util"] }
toml = "0.5"
# Compile dev and release with trace logs enabled
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.2", default-features = false, features = ["env-filter", "smallvec", "fmt", "tracing-log"] }
urlencoding = "2"
warp = { version = "0.3", default-features = false }
# Use rust implementation
zip = { version = "0.5", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = "0.3"
filetime = "0.2"
proptest = "1"
tempfile = "3"
pretty_assertions = "0.7"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0
