[package]
name = "rudder-relayd"
version = "0.0.0-dev"
description = "Service handling communication between Rudder agents and server"
authors.workspace = true
edition = "2021"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bench]]
harness = false
name = "benches"

[dependencies]
# We use vendored openssl as we require at least
# 1.1.1h for our certificate validation based on pinning.
# (it works since https://github.com/openssl/openssl/commit/e2590c3a162eb118c36b09c2168164283aa099b4)
anyhow = "1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.4.6", features = ["derive"] }
diesel = { version = "2", default-features = false, features = ["postgres", "chrono", "r2d2"] }
# Uses rust implementation by default
flate2 = "1"
futures = { version = "0.3", default-features = false }
hex = "0.4"
humantime = "2"
hyper = { version = "1", default-features = false }
http-body-util = "0.1.3"
inotify = "0.11"
lazy_static = "1"
nom = "8"
openssl = "0.10"
percent-encoding = "2.3"
prometheus = { version = "0.14", default-features = false, features = ["process"] }
regex = "1"
# Use openssl for TLS to be consistent
reqwest = { version = "0.12", default-features = false, features = ["stream", "blocking", "native-tls"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-inline-default = "0.2"
sha2 = "0.10"
sync_wrapper = { version = "1.0.0", features = ["futures"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = [ "rt-multi-thread", "process", "macros", "signal", "fs"] }
tokio-stream = { version = "0.1", default-features = false, features = ["io-util"] }
toml = "0.9"
# Compile dev and release with trace logs enabled
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "smallvec", "fmt", "tracing-log"] }
walkdir = "2"
#warp = { version = "0.4", default-features = false, features = ["server"] }
warp = { git = "https://github.com/amousset/warp", branch = "body-stream", default-features = false, features = ["server"] }
# Use rust implementation
zip = { version = "4.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = "0.7.0"
filetime = "0.2"
proptest = "1"
tempfile = "3"
pretty_assertions = "1"
rand = "0.9"
