[package]
name = "rudder-package"
version = "0.0.0-dev"
description = "Plugin manager for Rudder"
authors = ["Rudder developers <dev@rudder.io>"]
edition = "2021"
readme = "README.md"
homepage = "https://www.rudder.io"
repository = "https://github.com/Normation/rudder"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.75"
ar = "0.9.0"
assert-json-diff = "2.0.2"
dir-diff = "0.3.2"
lzma-rs = "0.3.0"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_toml = "0.0.1"
tar = "0.4.40"
tempfile = "3.8.0"
xmltree = "0.10.3"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
strip = true
